<LinearLayout xmlns:tools="http://schemas.android.com/tools"
     tools:context="${relativePackage}.${activityClass}" 
      xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
        android:layout_height="match_parent"
       
          android:padding="20dp"
        android:gravity="center"
        android:orientation="vertical" >

    <Button
        android:id="@+id/button_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       
        android:text="@string/button_movie" />

    <Button
        android:id="@+id/Button_fire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       
       
        android:text="@string/button_fire" />
    <Button
        android:id="@+id/Button_shopping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:text="@string/button_shopping" />
    <Button
        android:id="@+id/Button_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="printTable"

        android:text="@string/button_table" />
    </LinearLayout>

